<resources>

    <string name="app_name">ECODROID</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">EcoDroid</string>
    <string name="ecodroidlogo">Ecodroid Logo</string>
    <string name="BtnRec">Recicla!</string>
    <string name="BtnPlay">Juega!</string>
    <string name="BtnNewGame">Nueva Partida</string>
    <string name="BtnContinue">Continuar</string>
    <string name="BtnSettings">Configuración</string>
    <string name="title_activity_rec">Recicla!</string>
    <string name="title_activity_uno">Uno</string>
    <string name="title_activity_play">Juega!</string>
    <string name="title_score">100 ptos</string>
    <string name="desafio1">Recicla 10 botellas de vidrio en una semana. ¿Aceptar este desafío? (8 ptos)</string>
    <string name="desafio2">Ve a trabajar/estudiar en bicicleta 3 veces a la semana. ¿Aceptar este desafío? (12 ptos)</string>
    <string name="desafio3">Tarda la mitad del tiempo en lavarte, por 1 semana. ¿Aceptar este desafío? (10 ptos)</string>
    <string name="si">Completado</string>
    <string name="no">Cancelar</string>
    <string name="title_desafio1">Desafío 1</string>
    <string name="title_desafio2">Desafío 2</string>
    <string name="title_desafio3">Desafío 3</string>
    <string name="title_activity_desafio1">Desafio1</string>
    <string name="title_activity_desafio2">Desafio2</string>
    <string name="title_activity_desafio3">Desafio3</string>
    <string name="cleanprefs">Reset</string>
	<string name="pts">pts</string>
	<string name="tweetit">Comparte en Twitter!</string>
	<string name="check">Checkbox</string>
	<string name="youvewon">Has ganado</string>

</resources>