<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondohojas"
    android:orientation="vertical" >
    
    <LinearLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"> 
    
        <View 
            android:id="@+id/spacer1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        
        <ImageView 
	        android:contentDescription="@string/ecodroidlogo"
	        android:id="@+id/ecodroidlogo"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:adjustViewBounds="true"
	        android:src="@drawable/ecodroid"/>
        
        <View 
            android:id="@+id/spacer2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    
    </LinearLayout>
    
    <View
        android:id="@+id/spacervert1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Gallery android:id="@+id/gallery1" android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#aadddddd"
        android:padding="3dp" >

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <View
                android:id="@+id/spacerh0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/score"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/score"
                android:textSize="20dp" />

            <View
                android:id="@+id/spacerh01"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <View
                android:id="@+id/spacerh1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/Desafio1"
                style="@style/ButtonEcoDroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/desafio1"
                android:onClick="Desafio1"
                android:text="@string/title_desafio1"
                android:textSize="20dp" />

            <View
                android:id="@+id/spacerh2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <View
                android:id="@+id/spacerh3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/Desafio2"
                style="@style/ButtonEcoDroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/desafio2"
                android:onClick="Desafio2"
                android:text="@string/title_desafio2"
                android:textSize="20dp" />

            <View
                android:id="@+id/spacerh4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <View
                android:id="@+id/spacerh5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/Desafio3"
                style="@style/ButtonEcoDroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/desafio3"
                android:onClick="Desafio3"
                android:text="@string/title_desafio3"
                android:textSize="20dp" />

            <View
                android:id="@+id/spacerh6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/spacerh7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/TweetIt"
                style="@style/ButtonEcoDroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icono_twitter"
                android:onClick="TweetIt"
                android:text="@string/tweetit"
                android:textSize="20dp" />

            <View
                android:id="@+id/spacerh8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/spacervert2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
</LinearLayout>
